--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/scripts/d3.js')
   body
     block content
