Displaying map and initial layout

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,10 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/scripts/jquery.min.js')
+    script(src='/scripts/bootstrap.js')
     script(src='/scripts/d3.js')
   body
     block content
