--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,3 +108,26 @@ body {
   border: 1px solid #ccc;
   background-color: #fcfcfc;
 }
+
+.region {
+  fill: #fff;
+}
+
+.region:hover {
+  fill: #428bca;
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+}
+
+div.tooltip {
+  color: #222;
+  background-color: #fff;
+  padding: .5em;
+  text-shadow: #f5f5f5 0 1px 0;
+  border-radius: 2px;
+  opacity: 0.9;
+  position: absolute;
+}
