NEW: HighCharts + HighMaps

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,5 +7,23 @@ html
     script(src='/scripts/jquery.min.js')
     script(src='/scripts/bootstrap.js')
     script(src='/scripts/d3.js')
+    script(src='/scripts/highcharts.js')
+    script(src='/scripts/highcharts-more.js')
+    script(src='/scripts/map.js')
   body
+    nav.navbar.navbar-inverse.navbar-fixed-top
+      div.container-fluid
+        div.navbar-header
+          a.navbar-brand(href='#') Data Visualization
+
+    .container-fluid
+      .row
+        .col-sm-3.col-md-2.sidebar
+          ul.nav.nav-sidebar
+            li#nav-home: a(href='/') Home
+            li#nav-piemaphc: a(href='/piemaphc') Pies on Map - HighCharts
+
     block content
+
+    script.
+      $('#nav-!{activeNav}').toggleClass('active');
