--- a/views/index.jade
+++ b/views/index.jade
@@ -1,20 +1,8 @@
 extends layout
 
 block content
-  nav.navbar.navbar-inverse.navbar-fixed-top
-    div.container-fluid
-      div.navbar-header
-        a.navbar-brand(href='#') Data Visualization
+  .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
+    h1.page-header Pies on Map
+    .map.col-md-12
 
-  .container-fluid
-    .row
-      .col-sm-3.col-md-2.sidebar
-        ul.nav.nav-sidebar
-          li.active: a(href='/') Home
-          li: a(href='/piemap') Pie on Map
-
-      .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
-        h1.page-header Pies on Map
-        .map.col-md-12
-
-  script(src='/scripts/app.js')
+  script(src='/scripts/app-d3.js')
