HighCharts with Pies on Map

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,10 +7,11 @@ html
     script(src='/scripts/jquery.min.js')
     script(src='/scripts/bootstrap.js')
     script(src='/scripts/d3.js')
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.6/proj4.js")
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.6/proj4.js')
     script(src='/scripts/highcharts.js')
     script(src='/scripts/highcharts-more.js')
     script(src='/scripts/map.js')
+    script(src='https://code.highcharts.com/mapdata/countries/gb/gb-all.js')
   body
     nav.navbar.navbar-inverse.navbar-fixed-top
       div.container-fluid
