HighCharts: Better Pie formats and Dialogs on Click

--- a/views/piesonmaphc.jade
+++ b/views/piesonmaphc.jade
@@ -5,4 +5,11 @@ block content
 		h1.page-header Pies on Map - HighCharts
 		#map.map.col-md-12
 
+	#modal-click.modal.fade
+		.modal-dialog		
+			.modal-content
+				.modal-header Detalhes
+				.modal-body Dados
+		
+
 	script(src='/scripts/app-hc.js')
