Force Layout added with example

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,6 +25,7 @@ html
             li#nav-home: a(href='/') Home
             li#nav-piemapd3: a(href='/piemapd3') Pies on Map - D3
             li#nav-piemaphc: a(href='/piemaphc') Pies on Map - HighCharts
+            li#nav-piemaphc: a(href='/graphd3') Graph on Map - D3
 
     block content
 
